Z-index bug fixed

--- a/app/assets/sass/module.scss
+++ b/app/assets/sass/module.scss
@@ -129,6 +129,8 @@ $text_color:rgba(50,50,50,0.95);
 
 
 .box{
+  position:relative;
+  z-index:6;
   width: 70%;
   height:100%;
   display: table-cell;
